@@ -1,3 +1,15 @@
+2007-10-03  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Rob.
+
+        Fix a stupid bug in Unicode::toUpper/toLower.
+        Fixes all three test failures in the JavaScriptCore test
+        suite.
+
+        * wtf/unicode/qt4/UnicodeQt4.h:
+        (WTF::Unicode::toLower):
+        (WTF::Unicode::toUpper):
+
 === end merge of trunk/25970-26102 08-10-2007 ===
 
 2007-10-07  Ed Schouten  <ed@fxq.nl>
